v1.2.9 Fixed M Menu not showing on @atMedium

--- a/css/modules/site-header.scss
+++ b/css/modules/site-header.scss
@@ -86,10 +86,6 @@
       font-size: 1.4rem;
       display: none;
     }
-
-    @include atMedium {
-      display: none;
-    }
   }
 
   &__util {
